# donkey-ears

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: quality.yaml
donkey_ears/audio/: audio_file.py  base.py  microphone.py
donkey_ears/listeners/: audio.py  base.py  continuous_audio.py  prebuilt.py  raw_audio.py  state_based.py  state_labelers.py  transcriber.py
donkey_ears/speech_to_text/: __init__.py  base.py  coqui_stt.py  sphinx.py  vosk.py  whisper.py
tests/audio/: test_audio_file.py  test_base.py  test_microphone.py
tests/listeners/: test_audio.py  test_base.py  test_continuous_audio.py  test_raw_audio.py  test_state_based.py  test_transcriber.py
tests/speech_to_text/: test_base.py  test_vosk.py
