[tool.poetry]
name = "donkey-ears"
version = "0.1.0"
description = "A speech recognition library that provides a common interface to other speech recognition libraries."
authors = ["Michael Lipschultz <michael.lipschultz@gmail.com>"]
readme = "README.md"
packages = [{include = "donkey_ears"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pydub = "^0.25.1"
PyAudio = "^0.2.12"
matplotlib = "^3.6.1"
numpy = "^1.23.3"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
pylint = "^2.15.3"
isort = "^5.10.1"
pytest = "^7.1.3"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"
mypy = "^1.1.1"
types-pyaudio = "^0.2.16.6"
bandit = "^1.7.5"


[tool.poetry.group.vosk.dependencies]
vosk = "^0.3.44"


[tool.poetry.group.sphinx.dependencies]
pocketsphinx = "^5.0.0"


[tool.poetry.group.coqui.dependencies]
stt = "^1.4.0"


[tool.poetry.group.whisper.dependencies]
torch = "^1.12.1"
ffmpeg-python = "^0.2.0"
transformers = "^4.22.2"
openai-whisper = "^20230117"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = ["import-error", "missing-module-docstring", "missing-class-docstring", "missing-function-docstring"]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.basic]
good-names = ["fp", "i"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
